--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "homepage": "https://arunkmrs.github.io/1ReactApp",
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
